# FileEncryptor

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  example.txtEnc
FileEncryptor/: CMakeLists.txt  Main.cpp  Main.h
FileEncryptor/Encryptor/: Encryptor.cpp  Encryptor.h
